# GeoOffice

./: .bumpversion.cfg  README.md  README_DEV.md  main.py  pyproject.toml  requirements.txt
assets/: example.txt
docs/: mkdocs.yml
docs/docs/: architecture.md  autocad.md  cartogram.md  components_breadcrumbs.md  components_menu.md  components_search.md  components_stats.md  conversion.md  coordinates.md  documents.md  index.md  models.md  scale.md  service_cartogram.md  service_coordinate.md  service_scale.md  settings.md  taxation.md  utils.md
notebooks_and_drafts/: database_utils.ipynb  sync_points_and_video.ipynb
src/: app.py  main.py
src/components/: __init__.py  add_project_dialog.py  background_dialog_runner.py  banners.py  breadcrumbs.py  categorized_menu.py  link_section.py  menu.py  menu_search.py  status_bar.py  usage_stats.py
src/models/: __init__.py  cartogram_models.py  coordinate.py  database_model.py  project_model.py  scale_calculation.py  settings_model.py  wood_waste_model.py
src/modules/: manager.py
src/pages/: autocad_page.py  base_page.py  cartogram_page.py  conversion_page.py  coordinates_page.py  dashboard_page.py  documents_page.py  home_page.py  project_page.py  projects_page.py  scale_page.py  settings_page.py  taxation_page.py  tools_page.py  wood_waste.py
src/services/: __init__.py  background_service.py  cartogram_service.py  coordinate_service.py  database_service.py  link_folders_service.py  project_service.py  scale_service.py  search_service.py  semantic_search_service.py
src/utils/: __init__.py  coordinate_utils.py  (+6 more)
(+3 files in other folders)
